<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


    <TextView
        android:paddingTop="10dp"
        android:paddingLeft="12dp"
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_results"
        android:textSize="32dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:paddingLeft="10dp"
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repsLabe"
            android:textSize="22sp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:paddingLeft="10dp"
            android:id="@+id/repsInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/Reps"
            android:inputType="number" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:paddingLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wight_Lable"
            android:textSize="22sp"
            android:layout_marginTop="10dp"/>

        <EditText
        android:id="@+id/wightInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/repsInput"
        android:layout_alignStart="@+id/repsInput"
        android:layout_below="@+id/repsInput"
        android:ems="10"
        android:hint="@string/Weight"
        android:inputType="number" />
    </LinearLayout>

</LinearLayout>